# pnid-reconciliation

./: .cursorrules  .env.example  .gitignore  README.md  pyproject.toml
data_gen/: __init__.py  generate.py  inject_conflicts.py  instruments.py  models.py  render.py
docs/: 00_PROJECT_OVERVIEW.md  01_ARCHITECTURE.md  02_TECH_STACK.md  03_DOMAIN_GLOSSARY.md  04_DATA_MODEL.md  05_DATA_GENERATION.md  06_CODING_PRACTICES.md  07_TESTING.md  08_ANTI_DRIFT.md  09_FILE_STRUCTURE.md  10_BUILD_SEQUENCE.md  11_PROMPTS.md
eval/: __init__.py  ground_truth.py  metrics.py  run_eval.py
eval/output/: metrics.json  metrics.md
extract_results/: T1.json  T10.json  T11.json  T12.json  T13.json  T14.json  T15.json  T16.json  T17.json  T18.json  T19.json  T2.json  T20.json  T21.json  T22.json  T23.json  T25.json  T26.json  T27.json  T28.json  T29.json  T3.json  T4.json  T5.json  T6.json  T7.json  T8.json  T9.json
fail_logs/: T9.jpg.txt
scenarios/scenario_001/: ground_truth.json  instrument_index.csv  seed.json
scenarios/scenario_001/datasheets/: FCV-112.json  LT-104.json
scenarios/scenario_002/: ground_truth.json  instrument_index.csv  seed.json
scenarios/scenario_002/datasheets/: AT-114.json  FIC-105.json  FT-103.json  PT-101.json  PT-108.json  TIC-111.json  TT-102.json  TT-107.json
scripts/: batch_extract.py
src/pnid_recon/: config.py
tests/: test_api.py  test_data_gen.py  test_extraction.py  test_integration.py  test_match.py  test_metrics.py  test_normalize.py  test_rules.py  test_run_eval.py  test_tagparse.py
tests/fixtures/: reconciliation_fixtures.py
(+19 files in other folders)
