[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pnid-recon"
version = "0.1.0"
description = "P&ID extraction and cross-document reconciliation"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "cairosvg==2.7.1",
    "fastapi==0.115.8",
    "google-genai==1.12.1",
    "groq==1.5.0",
    "instructor==1.7.9",
    "lark==1.2.2",
    "ollama==0.6.2",
    "pandas==2.2.3",
    "pillow==11.1.0",
    "pydantic==2.10.6",
    "pydantic-settings==2.7.1",
    "svgwrite==1.4.3",
    "uvicorn[standard]==0.34.0",
]

[project.optional-dependencies]
dev = [
    "mypy==1.14.1",
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "ruff==0.9.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pnid_recon"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests", "data_gen", "eval"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
packages = ["pnid_recon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
